[project]
name = "jax_ml_ecosystem"
version = "0.1.0"
requires-python = ">=3.11, <4.0"
dependencies = [
    "absl-py>=2.1.0",
    "array-record>=0.7.2",
    "attrs>=23.2.0",
    "chex>=0.1.89",
    "cloudpickle>=3.0.0",
    "dm-tree>=0.1.9",
    "etils>=1.8.0",
    "flax>=0.10.7",
    "fsspec>=2024.5.0",
    "grain>=0.2.11",
    "humanize>=4.12.3",
    "importlib-resources>=6.4.0",
    "jax>=0.6.1",
    "jaxlib>=0.6.1",
    "markdown-it-py>=3.0.0",
    "mdurl>=0.1.2",
    "ml-dtypes>=0.5.1",
    "more-itertools>=10.7.0",
    "msgpack>=1.1.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.0.0",
    "opt-einsum>=3.3.0",
    "optax>=0.2.5",
    "orbax-checkpoint>=0.11.19",
    "protobuf>=6.31.1",
    "pygments>=2.18.0",
    "pyyaml>=6.0.2",
    "rich>=13.7.1",
    "scipy>=1.13.1",
    "setuptools>=76.0.0",
    "simplejson>=3.20.1",
    "tensorstore>=0.1.73",
    "toolz>=1.0.0",
    "treescope>=0.1.9",
    "typing-extensions>=4.12.0rc1",
    "wrapt>=1.17.2",
    "zipp>=3.18.2"
]
