[project]
name = "jax_ml_ecosystem"
version = "0.1.0"
requires-python = ">=3.11, <4.0"
dependencies = [
    "absl-py>=2.1.0",
    "array-record>=0.7.2",
    "attrs>=23.2.0",
    "auditwheel>=6.1.0",
    "build>=1.2.1",
    "cffi>=1.17.1 ; platform_python_implementation >= 'PyPy'",
    "chex>=0.1.89",
    "cloudpickle>=3.0.0",
    "colorama>=0.4.6",
    "contourpy>=1.2.1",
    "cycler>=0.12.1",
    "dm-tree>=0.1.9",
    "etils>=1.8.0",
    "execnet>=2.1.1",
    "filelock>=3.14.0",
    "flatbuffers>=24.3.25",
    "flax>=0.10.7",
    "fonttools>=4.51.0",
    "fsspec>=2024.5.0",
    "grain>=0.2.11",
    "humanize>=4.12.3",
    "hypothesis>=6.102.4",
    "importlib-resources>=6.4.0",
    "iniconfig>=2.0.0",
    "jax>=0.6.1",
    "jax-cuda12-pjrt>=0.6.1 ; sys_platform >= 'linux'",
    "jax-cuda12-plugin>=0.6.1 ; sys_platform >= 'linux'",
    "jaxlib>=0.6.1",
    "kiwisolver>=1.4.5",
    "libtpu>=0.0.13 ; platform_machine >= 'x86_64' and sys_platform >= 'linux'",
    "markdown-it-py>=3.0.0",
    "matplotlib>=3.9.0",
    "mdurl>=0.1.2",
    "ml-dtypes>=0.5.1",
    "more-itertools>=10.7.0",
    "mpmath>=1.4.0a1",
    "msgpack>=1.1.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.0.0",
    "nvidia-cublas-cu12>=12.8.3.14",
    "nvidia-cuda-cupti-cu12>=12.8.57",
    "nvidia-cuda-nvcc-cu12>=12.8.61",
    "nvidia-cuda-runtime-cu12>=12.8.57",
    "nvidia-cudnn-cu12>=9.8.0.87",
    "nvidia-cufft-cu12>=11.3.3.41",
    "nvidia-cusolver-cu12>=11.7.2.55",
    "nvidia-cusparse-cu12>=12.5.7.53",
    "nvidia-nccl-cu12>=2.25.1",
    "nvidia-nvjitlink-cu12>=12.8.61",
    "nvidia-nvshmem-cu12>=3.2.5 ; sys_platform >= 'linux'",
    "opt-einsum>=3.3.0",
    "optax>=0.2.5",
    "orbax-checkpoint>=0.11.19",
    "packaging>=24.0",
    "pillow>=11.0.0",
    "pluggy>=1.5.0",
    "portpicker>=1.6.0",
    "protobuf>=6.31.1",
    "psutil>=5.9.8",
    "pycparser>=2.22 ; platform_python_implementation >= 'PyPy'",
    "pyelftools>=0.31",
    "pygments>=2.18.0",
    "pyparsing>=3.1.2",
    "pyproject-hooks>=1.1.0",
    "pytest>=8.2.0",
    "pytest-xdist>=3.6.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "rich>=13.7.1",
    "scipy>=1.13.1",
    "setuptools>=76.0.0",
    "simplejson>=3.20.1",
    "six>=1.16.0",
    "sortedcontainers>=2.4.0",
    "tensorstore>=0.1.73",
    "toolz>=1.0.0",
    "treescope>=0.1.9",
    "typing-extensions>=4.12.0rc1",
    "wheel>=0.43.0",
    "wrapt>=1.17.2",
    "zipp>=3.18.2",
    "zstandard>=0.22.0"
]
